--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,5 +5,5 @@ Version: 1.0
 Date: 2018-06-04
 Author: Michael Nelson
 Maintainer: Michael Nelson <mnels@doh.health.nsw.gov.au>
-Description: Encoding
+Description: A package to test encoding and connections issues in R 3.5 on a Mac.
 License: GPL (>= 2)
